# python_project_scaffold

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/python_project_scaffold/: console.py
