[tool.poetry]
name = "python_project_scaffold"
version = "0.1.0"
description = "The python scaffold project"
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/SteveRutledge/python_project_scaffold"
repository = "https://github.com/SteveRutledge/python_project_scaffold"
keywords = ["python","scaffold"]
authors = ["Steve <sterutle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
